<resources>
    <string name="app_name">Appinion</string>
    <string name="action_settings">Settings</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="age">Age(Optional)</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="pin">Pin</string>
    <string name="registervalidationmessage">Please enter compulsory fields</string>
    <string name="loginvalidationmessage">Please enter all the fields</string>
    <string name="invalidemail">Invalid Email</string>
    <string name="login">Login</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="register">Register</string>
    <string name="nointernet">No internet available</string>
    <string name="title_activity_coupons">CouponsActivity</string>
    <string name="use">Use</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>

    <!--@ali Update profile value-->
    <string name="btnUpdate">Update</string>
    <string name="updateProfile">Update Profile</string>
    <string name="btnCoupon">Coupon</string>
    <string name="btnHome">Home</string>
    <string name="btnGiftCard">Gift Card</string>
    <string name="btnPromotion">Promotion</string>
    <string name="btnLoyalty">Loyalty</string>
    <string name="btnSurvey">Survey</string>

    <!--@ali Change password value-->
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm</string>
    <string name="btnChangePassword">Change Password</string>
    <string name="btnPrivacy">Privacy</string>
    <string name="btnHistory">History</string>
    <string name="search">Search</string>
    <string name="enterEmail">Enter your email:</string>
    <string name="birthday">Birthday</string>
    <string name="forgotitle">Please choose how you want \n     to reset your password</string>
    <string name="viatext">Via Text</string>
    <string name="viaemail">Via Email</string>


    <string-array name="profileactivity">
        <item></item>
        <item>Profile</item>
        <item>Update Profile</item>
        <item>Change Password</item>
        <item>Log Out</item>
    </string-array>
</resources>

