<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:background="#00ffffff"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView12"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/forgotitle"
            android:textColor="#000000" />

        <Button
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/viatext"
            android:id="@+id/btn_text"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundtransparent"
            android:textColor="#912fe0"
            />

        <Button

            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/viaemail"
            android:id="@+id/btn_email"
            android:background="@drawable/roundtransparent"
            android:layout_gravity="center_horizontal"
            android:textColor="#8213e3"
             />

        <Button

            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"
            android:background="#00FFFFFF"
            android:layout_gravity="center_horizontal"
            android:textColor="#912fe0"
            android:backgroundTint="#912fe0" />


    </LinearLayout>

</LinearLayout>
