<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/change_password"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/old_password"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="61dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_old_Password"
            android:layout_alignTop="@+id/textView4"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/new_password"
            android:id="@+id/textView7"
            android:layout_marginTop="43dp"
            android:layout_below="@+id/editText_old_Password"
            android:layout_alignRight="@+id/textView4"
            android:layout_alignEnd="@+id/textView4" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_newPassword"
            android:layout_alignTop="@+id/textView7"
            android:layout_alignRight="@+id/editText_old_Password"
            android:layout_alignEnd="@+id/editText_old_Password"
            android:layout_toRightOf="@+id/textView7"
            android:layout_toEndOf="@+id/textView7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/confirm_password"
            android:id="@+id/textView9"
            android:layout_below="@+id/textView7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="67dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_confirm"
            android:layout_alignBottom="@+id/textView9"
            android:layout_alignRight="@+id/editText_newPassword"
            android:layout_alignEnd="@+id/editText_newPassword"
            android:layout_toRightOf="@+id/textView7"
            android:layout_toEndOf="@+id/textView7" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnChangePassword"
            android:id="@+id/button_changePassword"
            android:layout_marginTop="59dp"
            android:layout_below="@+id/textView9"
            android:layout_alignRight="@+id/textView2"
            android:layout_alignEnd="@+id/textView2" />


    </RelativeLayout>
</LinearLayout>
