<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#cccccc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="#aaaaaa">

        <TextView
            android:id="@+id/listitemscoupons_tv_title"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="56dp" />



        <ImageView
            android:layout_width="match_parent"

            android:layout_height="180dp"
            android:id="@+id/imageViewCoupon"
            android:src="@mipmap/coupontest"
            android:scaleType="fitXY"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:text="@string/use"
                android:layout_margin="1dp"
                android:id="@+id/button_Use"
                android:onClick="onClick"
                android:textColor="#000000" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:text="@string/save"
                android:id="@+id/button_clip"


                android:textColor="#000000" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/send"
                android:layout_margin="1dp"
                android:id="@+id/button_forword"

                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>







</LinearLayout>