<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="-5dp"
        android:weightSum="1"
        android:background="@drawable/bag_login_final"
        >

        <LinearLayout
            android:layout_marginTop="300dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="190dp"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:background="@drawable/round">

            <EditText
                android:id="@+id/act_login_edt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_bottom_line"
                android:hint="@string/email"
                android:textColorHint="#aaaaaa"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="0dp"
                android:textColor="#ffffff"
                 />
            <EditText
                android:id="@+id/act_login_edt_pin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/pin"
                android:gravity="center"
                android:textColorHint="#aaaaaa"
                android:textColor="#ffffff"
                android:background="@drawable/edit_text_bottom_line"
              />
            <Button
                android:id="@+id/act_login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="Log In"
                android:background="@drawable/upcurve"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:layout_width="180dp"
            android:layout_height="30dp"
            >
            <Button
                android:id="@+id/act_login_btn_register"
                android:layout_width="200dp"
                android:layout_height="7dp"
                android:text="@string/register"
                android:layout_weight="1"
                android:onClick="onClick"
                android:background="#000000"
                android:textColor="#FFFFFF" />


            <Button
                android:id="@+id/act_login_btn_forgotpassword"
                android:layout_width="200dp"
                android:layout_height="2dp"
                android:text="@string/forgotpassword"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:onClick="onClick"
                android:background="#000000"
                android:textColor="#ffffff" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>

